welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: reassignment to val
	if(a=10 || b=10)
            ^makes10:8: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
		else if(a+b=10)
                         ^